uploaded new videos and updated styles and lightbox

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
     <link rel="stylesheet"
           href="css/owl.carousel.css">
     <link rel="stylesheet"
-          href="css/lightbox.min.css">
+          href="css/glightbox.min.css">
     <link rel="stylesheet"
           href="css/main.css">
 </head>
@@ -126,7 +126,7 @@
     </div>
 </section>
 <section class="section-top-border">
-    <div class="container">
+    <div class="container video">
         <div class="row video-item">
             <div class="col-md-12">
                 <video controls
@@ -216,115 +216,74 @@
             </div>
 </section>
 <!-- End Sample Area -->
-
 <section>
     <div class="container">
         <div class="section-top-border">
             <h3>From Our Gallery</h3>
             <div class="row gallery-item">
                 <div class="col-md-3">
+                    <a href="./media/test-welcome-back.mp4"
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Communications Picnic">
+                        <div class="single-gallery-image"
+                             style="background: url(img/gallery/test-welcome-back-thumb.jpg);"></div>
+                    </a>
+                </div>
+                <div class="col-md-3">
                     <a href="img/gallery/test-picnic-1.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Communications Picnic"
-                       data-alt="TEST Communications Picnic"
-                       data-title="Picnic 1">
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Communications Picnic">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-picnic-1.jpg);"></div>
                     </a>
                 </div>
                 <div class="col-md-3">
                     <a href="img/gallery/test-picnic-2.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Communications Picnic"
-                       data-alt="TEST Communications Picnic"
-                       data-title="Picnic 2">
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Communications Picnic">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-picnic-2.jpg);"></div>
                     </a>
                 </div>
                 <div class="col-md-3">
                     <a href="img/gallery/test-orientation-1.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Orientation"
-                       data-alt="TEST Orientation"
-                       data-title="Orientation 1">
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Orientation">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-orientation-1.jpg);"></div>
                     </a>
                 </div>
                 <div class="col-md-3">
                     <a href="img/gallery/test-orientation-2.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Orientation"
-                       data-alt="TEST Orientation"
-                       data-title="Orientation 2">
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Orientation">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-orientation-2.jpg);"></div>
                     </a>
                 </div>
                 <div class="col-md-3">
                     <a href="img/gallery/test-orientation-3.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Orientation"
-                       data-alt="TEST Orientation"
-                       data-title="Orientation 3">
+                       class="img-pop-up glightbox"
+                       data-glightbox="title: TEST Orientation">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-orientation-3.jpg);"></div>
                     </a>
                 </div>
                 <!-- divs below is only for placeholders. lightbox deactivated -->
-                <div class="col-md-3">
-                    <a href="img/gallery/company-photo.jpg"
-                       class="img-pop-up"
-                       data-lightbox="TEST Company Photo"
-                       data-alt="Company Photo"
-                       data-title="Company Photo">
-                        <div class="single-gallery-image"
-                             style="background: url(img/gallery/company-photo.jpg);"></div>
-                    </a>
-                </div>
-                <!--<div class="col-md-3">-->
-                    <!--<div class="single-gallery-image"-->
-                         <!--style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>-->
-                <!--</div>-->
-                <!--<div class="col-md-3">-->
-                    <!--<div class="single-gallery-image"-->
-                         <!--style="background: url(https://via.placeholder.com/250x200.png?text=Image+Goes+Here);"></div>-->
-                <!--</div>-->
-                <!--<div class="col-md-3">-->
-                    <!--<a href="img/elements/g7.jpg"-->
-                       <!--class="img-pop-up"-->
-                       <!--data-lightbox="image-1"-->
-                       <!--data-alt="Image 1"-->
-                       <!--data-title="Image 1">-->
-                        <!--<div class="single-gallery-image"-->
-                             <!--style="background: url(img/elements/g7.jpg);"></div>-->
-                    <!--</a>-->
-                <!--</div> -->
-                <!--<div class="col-md-3">-->
-                    <!--<a href="img/elements/g7.jpg"-->
-                       <!--class="img-pop-up"-->
-                       <!--data-lightbox="image-1"-->
-                       <!--data-alt="Image 1"-->
-                       <!--data-title="Image 1">-->
-                        <!--<div class="single-gallery-image"-->
-                             <!--style="background: url(img/elements/g7.jpg);"></div>-->
-                    <!--</a>-->
-                <!--</div>-->
-                <!--<div class="col-md-3">-->
-                    <!--<a href="img/elements/g8.jpg"-->
-                       <!--class="img-pop-up"-->
-                       <!--data-lightbox="image-1"-->
-                       <!--data-alt="Image 1"-->
-                       <!--data-title="Image 1">-->
-                        <!--<div class="single-gallery-image"-->
-                             <!--style="background: url(img/elements/g8.jpg);"></div>-->
-                    <!--</a>-->
-                <!--</div>-->
+<!--                <div class="col-md-3">-->
+<!--                    <a href="img/gallery/company-photo.jpg"-->
+<!--                       class="img-pop-up glightbox"-->
+<!--                       data-glightbox="title: TEST Company Photo">-->
+<!--                        <div class="single-gallery-image"-->
+<!--                             style="background: url(img/gallery/company-photo.jpg);"></div>-->
+<!--                    </a>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
 </section>
+
+
 
 <!-- start footer Area -->
 <footer class="footer-area section-gap">
@@ -394,9 +353,27 @@
 <script defer
         src="js/mail-script.js"></script>
 <script defer
-        src="js/lightbox.min.js"></script>
+        src="js/glightbox.min.js"></script>
 <script defer
         src="js/main.js"></script>
+<script>
+
+    document.addEventListener('DOMContentLoaded', function() {
+        const lightbox = GLightbox({
+            touchNavigation: true,
+            loop: true,
+            autoplayVideos: true,
+            onOpen: () => {
+                console.log('Lightbox opened')
+            },
+            beforeSlideLoad: (slideData) => {
+                // Need to execute a script in the slide?
+                // You can do that here...
+            }
+        });
+    })
+
+</script>
 </body>
 </html>
 
