--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
 			</section>
 			<!-- End banner Area -->
 			  <section class="section-top-border">
-				  <div class="container">
+				  <div class="container video">
 					  <div class="row video-item">
 						  <div class="col-md-12">
 							  <video controls
 									 autoplay>
-								  <source src="./media/test-core-values.mov"
+								  <source src="./media/test-core-values.mp4"
 										  type="video/mp4">
 								  <!--<source src="movie.ogg" type="video/ogg">-->
 								  Your browser does not support the video tag.
