video files and updated about.html

--- a/about.html
+++ b/about.html
@@ -224,7 +224,7 @@
                 <div class="col-md-3">
                     <a href="./media/test-welcome-back.mp4"
                        class="img-pop-up glightbox"
-                       data-glightbox="title: TEST Communications Picnic">
+                       data-glightbox="title: TEST Communications Welcome Back Highlight Video">
                         <div class="single-gallery-image"
                              style="background: url(img/gallery/test-welcome-back-thumb.jpg);"></div>
                     </a>
