updated job description benefit text

--- a/careers.html
+++ b/careers.html
@@ -108,7 +108,7 @@
 <!-- End banner Area -->
 
 <section class="section-top-border">
-    <div class="container">
+    <div class="container video">
         <div class="row video-item">
             <div class="col-md-12">
                 <video controls
