--- a/tower-technician-1.html
+++ b/tower-technician-1.html
@@ -251,25 +251,28 @@
         <h4 class="mb-20">Benefits Include</h4>
         <ul class="unordered-list">
             <li>
-                <p>Competitive Compensation</p>
+                <p>Dental, Vision</p>
             </li>
             <li>
-                <p>Health, dental, vision (after 60 days)</p>
+                <p>100% Paid Health </p>
             </li>
             <li>
                 <p>Paid Life Insurance</p>
             </li>
             <li>
-                <p>Short Term Disability</p>
+                <p>Paid Short Term Disability</p>
             </li>
             <li>
-                <p>IRA (after 18 months)</p>
+                <p>401K Company Match</p>
             </li>
             <li>
                 <p>Paid Time Off</p>
             </li>
             <li>
-                <p>Incentive programs</p>
+                <p>Holidays</p>
+            </li>
+            <li>
+                <p>Monthly Incentive Programs</p>
             </li>
         </ul>
     </div>
