--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				  </div>
 			  </section>
 			<!-- Start cat Area -->
-			<section class="cat-area section-gap" id="feature">
+			<section class="cat-area mb-80" id="feature">
 				<div class="container">							
 					<div class="row">
 						<div class="col-lg-4">	
